--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,7 +7,9 @@
 
 		<title>joc</title>
 
-		<link rel="stylesheet" href="assets/css/sanitize.css" />
+		<link rel="stylesheet" href="./assets/css/sanitize.css" />
+		<link rel="stylesheet" href="./assets/css/fonts.css" />
+		<link rel="stylesheet" href="./assets/css/styles.css" />
 	</head>
 	<body>
 		{{ content }}
