add favicon & header

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>joc</title>
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <title>joc programming language</title>
 
     <link rel="stylesheet" href="./assets/css/sanitize.css" />
     <link rel="stylesheet" href="./assets/css/fonts.css" />
@@ -25,7 +26,10 @@
       {% endfor %}
     </nav>
 
-    <header></header>
+    <header>
+      <h1>joc</h1>
+      <h2>programming language</h2>
+    </header>
     <main>
       <aside></aside>
       <article>{{ content }}</article>
