--- a/docs/assets/css/styles.scss
+++ b/docs/assets/css/styles.scss
@@ -3,6 +3,7 @@
 
 $light: #ffe;
 $dark: #322;
+$darker: #211;
 
 $screen-sm: 600px;
 $screem-md: 900px;
@@ -11,6 +12,10 @@ $screem-md: 900px;
     width: 24px;
     height: 24px;
     fill: #555;
+}
+
+:target {
+    scroll-margin-top: 4rem;
 }
 
 html {
@@ -22,6 +27,7 @@ html {
         background-color: $dark;
         color: $light;
     }
+    scroll-behavior: smooth;
 }
 
 nav {
@@ -62,11 +68,33 @@ header {
     background-repeat: no-repeat;
     background-blend-mode: overlay;
     border-bottom: 1px solid;
+    h1 {
+        font-size: 64pt;
+    }
 }
 
 main {
     display: flex;
     justify-content: center;
+    align-items: flex-start;
+    @media (max-width: $screen-sm) {
+        flex-direction: column;
+    }
+    gap: 1rem;
+    aside {
+        position: sticky;
+        @media (max-width: $screen-sm) {
+            position: static;
+        }
+        top: 4rem;
+        padding: 1rem;
+        ul {
+            list-style: none;
+        }
+        & > ul {
+            padding: 0;
+        }
+    }
     article {
         flex: 1;
         max-width: $screem-md;
@@ -106,5 +134,11 @@ a {
 
 pre,
 code {
+    background-color: $darker;
     font-family: "FiraCode";
+}
+pre {
+    padding: 1rem;
+    max-width: calc(100vw - 2rem);
+    overflow: scroll;
 }
