--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
     <title>joc {{ page.title }}</title>
 
-    <link rel="stylesheet" href="./assets/css/sanitize.css" />
-    <link rel="stylesheet" href="./assets/css/fonts.css" />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/sanitize.css" />
+    <link rel="stylesheet" href="assets/css/fonts.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
     <nav>
@@ -18,7 +18,7 @@
       <a href="{{ i.link }}">
         <svg class="remix">
           <use
-            xlink:href="./assets/remixicon.symbol.svg#ri-{{ i.icon }}-fill"
+            xlink:href="assets/remixicon.symbol.svg#ri-{{ i.icon }}-fill"
           ></use>
         </svg>
         <span>{{ i.name }}</span>
