--- a/docs/assets/css/styles.scss
+++ b/docs/assets/css/styles.scss
@@ -89,9 +89,10 @@ header {
 main {
     display: flex;
     justify-content: center;
-    align-items: stretch;
+    align-items: flex-start;
     @media (max-width: $screen-sm) {
         flex-direction: column;
+        align-items: stretch;
     }
     gap: 1rem;
     aside {
