--- a/docs/assets/css/styles.scss
+++ b/docs/assets/css/styles.scss
@@ -41,6 +41,10 @@ button {
         color: var(--bg);
         background-color: var(--fg);
     }
+    border: 1px solid transparent;
+    &:focus {
+        border: 1px solid;
+    }
 }
 
 nav {
@@ -143,7 +147,6 @@ pre {
 }
 
 button {
-    border: none;
     margin: 0.5rem;
     padding: 1rem;
     font-size: inherit;
